--- a/index.html
+++ b/index.html
@@ -3966,6 +3966,8 @@ onclick="fecharModal(event)">Fechar</button></div></div>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-messaging-compat.js"></script> 
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-storage-compat.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> 
+
 <script>
 // Firebase e variáveis globais
 const firebaseConfig = {
