--- a/index.html
+++ b/index.html
@@ -2830,7 +2830,7 @@ onclick="fecharModal(event)">Fechar</button></div></div>
       <p>Escaneie o QR Code abaixo com seu app de banco.</p>
       <img src="https://i.postimg.cc/fTZyFN6G/qrcode.jpg" id="pix-qrcode" alt="QR Code PIX">
       <div class="pix-copia-cola-container">
-          <textarea id="pixChaveAleatoria">00020126770014BR.GOV.BCB.PIX0136ec4a8f0f-ec59-44bc-afcf-dff364f971de0215NAVALHA DE OURO5204000053039865802BR5920Josiel Lopes Azeredo6009SAO PAULO62140510vuyKg7Qnmx63041C39</textarea>
+          <textarea id="pixChaveAleatoria">00020126770014BR.GOV.BCB.PIX0136ac099e3b-e63e-402f-9d3e-6e20828470b90215Nova Versão APP5204000053039865802BR5920Josiel Lopes Azeredo6009SAO PAULO62140510ERLNMtaT5r63040E73</textarea>
           <button onclick="copiarCodigoPixAprimorado(event)">Copiar Chave Aleatória PIX</button>
       </div>
       <p style="font-size: 14px; color: #ff9800; margin-top: 15px;">Este código expira em: <b id="pixTimer">10:00</b></p>
