--- a/index.html
+++ b/index.html
@@ -5624,7 +5624,7 @@ async function abrirModalCarteira() {
         <div style="background: linear-gradient(135deg, #1e1e1e, #2a2a2a); padding: 15px; border-radius: 12px; border: 1px solid #444; margin-bottom: 15px;">
             <div style="display:flex; justify-content:space-between; align-items:center;">
                 <div style="text-align:left;">
-                    <span style="font-size:14px; display:block;">🇧🇷 Saldo (Serviços)</span>
+                    <span style="font-size:14px; display:block;">💶 Saldo (Serviços)</span>
                     <span style="font-size:11px; color:#aaa;">Para pagar/receber cortes</span>
                 </div>
                 <span style="font-size:20px; font-weight:bold; color:#fff;">R$ ${saldoServicos.toFixed(2)}</span>
