--- a/index.html
+++ b/index.html
@@ -5625,7 +5625,7 @@ async function abrirModalCarteira() {
             <div style="display:flex; justify-content:space-between; align-items:center;">
                 <div style="text-align:left;">
                     <span style="font-size:14px; display:block;">💶 Saldo (Serviços)</span>
-                    <span style="font-size:11px; color:#aaa;">Para pagar/receber cortes</span>
+                    <span style="font-size:11px; color:#aaa;">PAGA SOMENTE SERVIÇOS</span>
                 </div>
                 <span style="font-size:20px; font-weight:bold; color:#fff;">R$ ${saldoServicos.toFixed(2)}</span>
             </div>
@@ -5639,9 +5639,9 @@ async function abrirModalCarteira() {
             <div style="display:flex; justify-content:space-between; align-items:center;">
                 <div style="text-align:left;">
                     <span style="font-size:14px; color: #00c6ff; display:block;">💎 Saldo Digital</span>
-                    <span style="font-size:11px; color:#aaa;">Para VIP e Itens do App</span>
+                    <span style="font-size:11px; color:#aaa;">PAGA VIPS, PRODUTOS E ITENS DO PERFIL</span>
                 </div>
-                <span style="font-size:20px; font-weight:bold; color:#00c6ff;">C$ ${saldoDigital.toFixed(2)}</span>
+                <span style="font-size:20px; font-weight:bold; color:#00c6ff;">R$ ${saldoDigital.toFixed(2)}</span>
             </div>
 
             <button onclick="iniciarCompraMoedas()" style="width:100%; margin-top:15px; background: linear-gradient(45deg, var(--cor-destaque-azul), #0072ff); font-weight:bold;">💎 Comprar Moedas</button>
